[package]
name = "tournament-tests-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.11"
tokio = { version="1.15.0", features=["full"]}
pin-project = "1.0.8"

reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }